# mimas

./: README.md  pyproject.toml
src/mimas/: __init__.py  interface.py  native_frontend.py  web_frontend.py
src/mimas/backend/: __init__.py  serve_python_code.py
src/mimas/data/: init.js  setup_snippet.html
